applicants/rules.v4
# Generated by iptables-save v1.6.0 on Tue Apr 25 12:40:23 2017
*filter
:INPUT DROP [1:110]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [25:2649]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.127.27.0/24 -j ACCEPT
-A INPUT -s 204.87.213.0/24 -j ACCEPT
-A INPUT -s 10.127.1.0/24 -j ACCEPT
-A INPUT -s 192.168.77.0/24 -j ACCEPT
-A INPUT -s 74.122.74.32/27 -j ACCEPT
-A INPUT -s 172.31.250.0/24 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Apr 25 12:40:23 2017
